--- a/15-Mapty-TS/package.json
+++ b/15-Mapty-TS/package.json
@@ -9,7 +9,12 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/geojson": "^7946.0.14",
+    "@types/leaflet": "^1.9.12",
     "typescript": "^5.5.3",
     "vite": "^5.4.8"
+  },
+  "dependencies": {
+    "leaflet": "^1.9.4"
   }
 }
