--- a/17-Modern-JS-Modules-Tooling/package.json
+++ b/17-Modern-JS-Modules-Tooling/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "lodash-es": "^4.17.21"
+  },
+  "devDependencies": {
+    "parcel": "^2.12.0"
   }
 }
