--- a/17-Modern-JS-Modules-Tooling/package.json
+++ b/17-Modern-JS-Modules-Tooling/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "core-js": "^3.39.0",
     "lodash-es": "^4.17.21"
   },
   "devDependencies": {
