--- a/18-forkify/package.json
+++ b/18-forkify/package.json
@@ -16,5 +16,8 @@
   "devDependencies": {
     "@parcel/transformer-sass": "^2.13.0",
     "parcel": "^2.13.0"
+  },
+  "dependencies": {
+    "fracty": "^1.0.11"
   }
 }
