--- a/18-forkify/package.json
+++ b/18-forkify/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.13.0",
+    "@types/node": "^22.9.3",
     "parcel": "^2.13.0"
   },
   "dependencies": {
